package sample;

public interface ILoader {
    public void load();
}
